--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/alsuibr/frontend-project-44/workflows/hexlet-check/badge.svg)](https://github.com/alsuibr/frontend-project-44/actions)",
-  "main": "index.js",
+  "main": "brain-games.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
+    "type": "git",
     "url": "git+https://github.com/alsuibr/frontend-project-44.git"
   },
   "type": "module",
